--- a/app/src/main/res/layout-land/fragment_about.xml
+++ b/app/src/main/res/layout-land/fragment_about.xml
@@ -12,28 +12,26 @@
             android:layout_width="348dp"
             android:layout_height="60dp"
             android:layout_marginTop="30dp"
-            android:layout_marginBottom="34dp"
-            android:fontFamily="monospace"
 
+            android:fontFamily="monospace"
             android:text="About"
             android:textAlignment="center"
             android:textColor="#FF9800"
             android:textSize="36sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@+id/textView4"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.493"
+            app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/textView4"
             android:layout_width="545dp"
             android:layout_height="226dp"
             android:layout_marginStart="34dp"
+            android:layout_marginTop="10dp"
             android:layout_marginEnd="36dp"
-            android:layout_marginBottom="64dp"
+            android:layout_marginBottom="80dp"
             android:background="#BFBEF4"
             android:fontFamily="monospace"
             android:isScrollContainer="true"
