--- a/app/src/main/res/layout-land/fragment_register.xml
+++ b/app/src/main/res/layout-land/fragment_register.xml
@@ -26,14 +26,12 @@
             android:layout_width="329dp"
             android:layout_height="57dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="18dp"
-            android:layout_marginEnd="84dp"
+            android:layout_marginTop="24dp"
             android:background="#BFBEF4"
             android:ems="10"
             android:hint="Name"
             android:inputType="text"
             android:textColorHint="#CB00EF"
-            app:layout_constraintEnd_toStartOf="@+id/checkBoxTerms"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView3"
             tools:ignore="TextContrastCheck" />
@@ -42,8 +40,8 @@
             android:id="@+id/btnRegister"
             android:layout_width="250dp"
             android:layout_height="60dp"
-            android:layout_marginTop="30dp"
-            android:layout_marginEnd="65dp"
+            android:layout_marginTop="48dp"
+            android:layout_marginEnd="80dp"
             android:background="#D3F389"
             android:fontFamily="monospace"
             android:gravity="center"
@@ -57,35 +55,31 @@
 
         <CheckBox
             android:id="@+id/checkBoxTerms"
-            android:layout_width="202dp"
-            android:layout_height="20dp"
-            android:layout_marginTop="58dp"
-            android:layout_marginEnd="100dp"
-            android:layout_marginBottom="30dp"
+            android:layout_width="255dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="49dp"
+            android:layout_marginTop="65dp"
+            android:layout_marginEnd="82dp"
             android:background="#BFBEF4"
             android:fontFamily="monospace"
             android:text="I Accept All Terms and Conditions"
             android:textColor="#CB00EF"
-            app:layout_constraintBottom_toTopOf="@+id/btnRegister"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/editTextName"
             app:layout_constraintTop_toBottomOf="@+id/textView"
             tools:ignore="UnknownId,TextContrastCheck" />
 
         <EditText
             android:id="@+id/editTextPass"
-            android:layout_width="327dp"
-            android:layout_height="57dp"
+            android:layout_width="328dp"
+            android:layout_height="61dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="28dp"
-            android:layout_marginEnd="388dp"
-            android:layout_marginBottom="81dp"
+            android:layout_marginTop="6dp"
             android:background="#BFBEF4"
             android:ems="10"
             android:hint="Password"
             android:inputType="textPassword"
             android:textColorHint="#CB00EF"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
             tools:ignore="TextContrastCheck" />
@@ -95,14 +89,12 @@
             android:layout_width="329dp"
             android:layout_height="57dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="71dp"
+            android:layout_marginTop="8dp"
             android:background="#BFBEF4"
             android:ems="10"
             android:hint="Email"
             android:inputType="textEmailAddress"
             android:textColorHint="#CB00EF"
-            app:layout_constraintEnd_toStartOf="@+id/btnRegister"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/editTextName"
             tools:ignore="TextContrastCheck" />
