--- a/app/src/main/res/layout-land/fragment_bmi.xml
+++ b/app/src/main/res/layout-land/fragment_bmi.xml
@@ -33,7 +33,8 @@
             android:layout_width="253dp"
             android:layout_height="72dp"
 
-            android:layout_marginTop="16dp"
+            android:layout_marginStart="240dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="239dp"
             android:background="#D3F389"
             android:fontFamily="monospace"
@@ -42,13 +43,15 @@
             android:textColor="#FF0000"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/height" />
 
         <TextView
             android:id="@+id/result"
-            android:layout_width="308dp"
-            android:layout_height="136dp"
-            android:layout_marginTop="32dp"
+            android:layout_width="295dp"
+            android:layout_height="149dp"
+            android:layout_marginTop="15dp"
             android:layout_marginEnd="36dp"
             android:background="#BFBEF4"
             android:hint="Result"
@@ -68,7 +71,7 @@
             android:layout_width="325dp"
             android:layout_height="63dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="15dp"
             android:layout_marginEnd="46dp"
             android:background="#BFBEF4"
             android:ems="10"
@@ -84,7 +87,7 @@
             android:id="@+id/imageView2"
             android:layout_width="174dp"
             android:layout_height="79dp"
-            android:layout_marginTop="26dp"
+            android:layout_marginTop="15dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.499"
             app:layout_constraintStart_toStartOf="parent"
