--- a/app/src/main/res/layout-land/fragment_help.xml
+++ b/app/src/main/res/layout-land/fragment_help.xml
@@ -26,12 +26,12 @@
 
         <TextView
             android:id="@+id/textView4"
-            android:layout_width="654dp"
-            android:layout_height="197dp"
+            android:layout_width="667dp"
+            android:layout_height="160dp"
             android:layout_marginStart="38dp"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="21dp"
             android:layout_marginEnd="39dp"
-            android:layout_marginBottom="56dp"
+            android:layout_marginBottom="84dp"
             android:background="#BFBEF4"
             android:hint="Enter Message Here ...."
             android:isScrollContainer="true"
@@ -43,6 +43,7 @@
             android:verticalScrollbarPosition="right"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.461"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView5"
             tools:ignore="TextContrastCheck" />
