--- a/app/src/main/res/layout-land/fragment_home.xml
+++ b/app/src/main/res/layout-land/fragment_home.xml
@@ -14,7 +14,7 @@
 
             android:layout_marginStart="35dp"
             android:layout_marginTop="36dp"
-            android:layout_marginEnd="29dp"
+            android:layout_marginEnd="40dp"
             android:background="#D3F389"
             android:fontFamily="monospace"
             android:gravity="center"
@@ -24,6 +24,7 @@
             android:textColor="#FF0000"
             android:textSize="18sp"
             app:layout_constraintEnd_toStartOf="@+id/imageView4"
+            app:layout_constraintHorizontal_bias="0.812"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/btnAddLog"
             tools:ignore="TextContrastCheck" />
@@ -72,10 +73,10 @@
 
         <ImageView
             android:id="@+id/imageView4"
-            android:layout_width="326dp"
-            android:layout_height="291dp"
+            android:layout_width="276dp"
+            android:layout_height="266dp"
             android:layout_marginTop="41dp"
-            android:layout_marginEnd="28dp"
+            android:layout_marginEnd="35dp"
             android:layout_marginBottom="79dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
