--- a/app/src/main/res/layout-land/fragment_login.xml
+++ b/app/src/main/res/layout-land/fragment_login.xml
@@ -11,17 +11,15 @@
             android:id="@+id/textView"
             android:layout_width="166dp"
             android:layout_height="59dp"
-            android:layout_marginStart="292dp"
-            android:layout_marginTop="9dp"
-            android:layout_marginEnd="273dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginEnd="241dp"
             android:fontFamily="monospace"
             android:text="Welcome"
             android:textColor="#FF9800"
             android:textSize="36sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
             android:id="@+id/editTextEmail"
@@ -73,17 +71,19 @@
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />
+            app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
+            app:layout_constraintVertical_bias="0.0" />
 
         <ImageView
             android:id="@+id/imageView3"
-            android:layout_width="146dp"
-            android:layout_height="104dp"
-            android:layout_marginStart="293dp"
+            android:layout_width="104dp"
+            android:layout_height="86dp"
+            android:layout_marginStart="208dp"
             android:layout_marginTop="16dp"
-            android:layout_marginEnd="293dp"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="12dp"
+            app:layout_constraintEnd_toStartOf="@+id/textView"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/login" />
